Bug #18395 dual mysqld's with binlog do not sync drop table binlog event correctly
Submitted: 21 Mar 2006 15:57 Modified: 5 Apr 2006 6:25
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1.8 bk src OS:
Assigned to: Tomas Ulin Target Version:

[21 Mar 2006 15:57] Tomas Ulin
Description:
in mysqltest

--connection server1
drop table t1;
--connection server2
show binlog events;

at this point drop table t1 may not be seen in the binlog although it should

seen on occation in pushbuild testing

How to repeat:
see above
[21 Mar 2006 16:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3995
[4 Apr 2006 10:05] Tomas Ulin
pushed to 5.1.8
[5 Apr 2006 6:25] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented fix in 5.1.8 changelog; closed.