Bug #18395 dual mysqld's with binlog do not sync drop table binlog event correctly - in ndb_binlog_thread_handle_schema_event make sure to postpone "slock achnowledgement" until event has been put into the binlog

+ some cleanup, Cluster_replication_schem -> Cluster_schema, indentation